<?xml version="1.0" encoding="utf-8"?>
<FrameLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".DrawPath.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonSimple"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/simple_direction" />

        <Button
            android:id="@+id/buttonTransit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/transit_direction" />

        <Button
            android:id="@+id/buttonAlternative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/alternative_direction" />

        <Button
            android:id="@+id/buttonWaypoints"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/waypoints_direction" />

        <Button
            android:id="@+id/buttonMultiLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/multi_location" />

    </LinearLayout>

</FrameLayout>